zapisywanie programow do ustawiania glosnosci

--- a/data/languages/english.json
+++ b/data/languages/english.json
@@ -63,5 +63,6 @@
     "Tab Letters": "Letters",
     "Tab Functions": "Functions",
     "Tab Numbers": "Numbers",
-    "Tab Others": "Others"
+    "Tab Others": "Others",
+    "Bind Nothing": "Bind nothing"
    }
