--- a/data/languages/polski.json
+++ b/data/languages/polski.json
@@ -63,5 +63,6 @@
  "Tab Letters": "Litery",
  "Tab Functions": "Funkcje",
  "Tab Numbers": "Liczby",
- "Tab Others": "Inne"
+ "Tab Others": "Inne",
+ "Bind Nothing": "Anuluj przypisanie"
 }
